[workspace]
members = [".", "rclrs"]

[package]
name = "rocc"
version = "0.2.1"
authors = ["Trim Bresilla <trim.bresilla@gmail.com>"]
description = "Robot Operations Command Center"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "roc"
path = "src/main.rs"

[dependencies]
rclrs = { path = "rclrs" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive"] }
clap_complete = "4.3"
getset = "0.1.2"
colored = "2.0.4"
walkdir = "2.4"
roxmltree = "0.18"
num_cpus = "1.16"
chrono = "0.4"