[workspace]
members = ["."]

[package]
name = "rocc"
version = "0.3.0"
authors = ["Trim Bresilla <trim.bresilla@gmail.com>"]
description = "Robot Operations Command Center"
edition = "2021"
license = "MIT OR Apache-2.0"
build = "build.rs"

[[bin]]
name = "roc"
path = "src/main.rs"

[dependencies]
rclrs = { path = "deps/ros2_rust/rclrs" }
tokio = { version = "1.49", features = ["full"] }
anyhow = "1.0.75"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
getset = "0.1.2"
colored = "2.0.4"
walkdir = "2.4"
roxmltree = "0.18"
num_cpus = "1.16"
chrono = "0.4"
ctrlc = "3.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
mcap = "0.17"
memmap2 = "0.9"
libloading = "0.8"
regex = "1.11"
shlex = "1.3"

[dev-dependencies]
tempfile = "3.3"

[build-dependencies]
bindgen = "0.70"
