<?xml version="1.0"?>
<package format="3">
  <name>demo_math_cpp</name>
  <version>0.1.0</version>
  <description>Reusable C++ data-processing helpers plus a demo ROS 2 node.</description>
  <maintainer email="examples@example.com">ROC Examples</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
