<?xml version="1.0"?>
<package format="3">
  <name>demo_python_tools</name>
  <version>0.1.0</version>
  <description>Python example package with a ROS node and testable CLI helpers.</description>
  <maintainer email="examples@example.com">ROC Examples</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
