<?xml version="1.0"?>
<package format="3">
  <name>demo_missing_resource_pkg</name>
  <version>0.1.0</version>
  <description>ament_python fixture missing resource marker</description>
  <maintainer email="fixtures@example.com">Fixture Maintainer</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>rclpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
