<?xml version="1.0"?>
<package format="3">
  <name>consumer_node_pkg</name>
  <version>0.1.0</version>
  <description>Dependent package for dependency ordering fixture</description>
  <maintainer email="fixtures@example.com">Fixture Maintainer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>base_msgs_pkg</build_depend>
  <exec_depend>base_msgs_pkg</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
